--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,27 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
       </div>
     </div>
-  </div>  
+  </div>
+  
+  <div class="single-product section">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+        </div>
+        <div class="col-lg-6 align-self-center">
+          <form id="qty" action="https://discord.gg/labebehstore">
+            <button type="submit"><i class="fa-brands fa-discord"></i> Discord</button>
+          </form>
+          <form id="qty" action="https://wa.me/6285789103968">
+            <button type="submit"><i class="fa-brands fa-whatsapp"></i> WhatsApp</button>
+          </form>
+        </div>
+        <div class="col-lg-12">
+          <div class="sep"></div>
+        </div>
+      </div>
+    </div>
+  </div> 
 
   <footer>
     <div class="container">
@@ -118,4 +138,4 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="assets/js/custom.js"></script>
 
   </body>
-</html>
+              </html> 
