--- a/contact.html
+++ b/contact.html
@@ -93,6 +93,7 @@ https://templatemo.com/tm-589-lugx-gaming
             <ul>
               <li><span>WhatsApp</span> +62 857-8910-3968</li>
               <li><span>Discord</span> https://discord.gg/labebehstore</li>
+              <li><span>Instagram</span> https://instagram.com/labebeh_store</li>
             </ul>
           </div>
         </div>
@@ -111,6 +112,9 @@ https://templatemo.com/tm-589-lugx-gaming
           </form>
           <form id="qty" action="https://wa.me/6285789103968">
             <button type="submit"><i class="fa-brands fa-whatsapp"></i> WhatsApp</button>
+          </form>
+          <form id="qty" action="https://instagram.com/labebeh_store">
+            <button type="submit"><i class="fa-brands fa-instagram"></i> WhatsApp</button>
           </form>
         </div>
         <div class="col-lg-12">
@@ -138,4 +142,4 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="assets/js/custom.js"></script>
 
   </body>
-              </html> 
+</html>
